# Grad_Project_2017

./: CMakeList.txt  CMakeLists.txt  Grad_Project  Grad_Project.pro  LICENSE  Makefile  README.md  face_tracking.cpp  face_tracking.h  main.cpp  mainwindow.h  recognition_tracking.cpp  recognition_tracking.h  test.cc  tracking.cc  tracking.h
